FH KÃrnten Bewerb hinzugefÃgt

--- a/Marketing.tex
+++ b/Marketing.tex
@@ -193,6 +193,13 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
     Vorbild in englischer Sprache."
     Von unserem Auftritt und unserer Idee überzeugt, wurden wir von dem Leiter der ECER eingeladen, unser Projekt zu präsentieren.
 
+    \subsection*{{Maturaprojekt-Wettbewerb FH Kärnten\cite{fhkaernten}}}
+    Auch bei diesem Wettbewerb reichen Maturaprojekt-Teams aus ganz Österreich ihre Projektideen ein.
+    Mit einer Teilnehmerzahl von knapp 120 Projekten ist der Wettbewerb einer der größten Österreichs. Eine
+    Experten-Jury aus verschiedenen Fachbereichen wählen sechzehn Teams, die in die engere Auswahl kommen.
+    Hovering Steward wurde aus einer Gruppe von 70 Mitstreitern für die Teilnahme am Finale gewählt und konnte somit
+    auch an der FH Kärnten das Projekt an die Öffentlichkeit bringen.
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Blog}
 Dieses Kapitel setzt sich mit dem Entwicklungsprozess der technischer Planung, bis zur Implementierung
