--- a/diplom.bib
+++ b/diplom.bib
@@ -443,6 +443,12 @@
 	title = {YoxView Image Viewer Plugin}
 }
 
+@online{fhkaernten,
+	lastchecked = {2016-05-06},
+	url = {https://www.fh-kaernten.at/ueber-die-fh/organisation/servicebereiche/service-fuer-schulen/maturaprojekt-wettbewerb/},
+	title = {Maturaprojekt-Wettbewerb FH Kärnten}
+}
+
 % Markus: Wie Farben wirken Buch
 @article{WieFarbenWirken,
 	author = {Heller, Eva},
