JavaScript fehlt noch mein hase <3

--- a/Marketing.tex
+++ b/Marketing.tex
@@ -12,7 +12,7 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
     \subsection*{SWOT-Analyse}
     Mithilfe der SWOT-Analyse wird der aktuelle Zustand eines Unternehmens, oder in unserem Fall Projekts, analysiert, um anschließend eine von vier möglichen Strategien
     für den weiteren Verlauf des Unternehmens zu erarbeiten. Es werden Stärken, Schwächen, Möglichkeiten und Risiken evaluiert, wobei sich jeweils Stärken und Schwächen, und
-    Chancen und Gefahren gegenüberstehen. Die vier Begriffe, auf englisch übersetzt \textbf{S}trengths, \textbf{W}eaknesses, \textbf{O}pportunities und \textbf{T}hreats,
+    Chancen und Gefahren gegenüberstehen. Die vier Begriffe, auf Englisch übersetzt \textbf{S}trengths, \textbf{W}eaknesses, \textbf{O}pportunities und \textbf{T}hreats,
     ergeben dadurch das Akronym SWOT.
 
     \begin{figure}[H]
@@ -64,7 +64,7 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
     \end{figure}
 
     \begin{itemize}
-      \item Die \textbf{Cashcow} ist ein Produkt des Unternehmens, welches sich bereits lange Zeit auf dem Markt hält und dadurch hohe Gewinne erziehlt. Durch die
+      \item Die \textbf{Cashcow} ist ein Produkt des Unternehmens, welches sich bereits lange Zeit auf dem Markt hält und dadurch hohe Gewinne erzielt. Durch die
       erarbeitete hohe Position auf dem Markt decken sich ihre Kosten durch den Gewinn selbst. Die Cashcow stellt zudem die Basis für die Weiterentwicklung anderer
       Produkte dar.
 
@@ -119,8 +119,8 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
     \end{figure}
 
     \subsection*{Blog}
-    Der Blog war die wichtigste Komponente für das Veröffentlichen von akuellen Informationen. Es wurde Wert darauf gelegt
-    in regelmäßgen Abständen aktuelle Inhalte über den Projektverlauf zu veröffentlichen. Die Zielgruppe waren primär junge Techniker,
+    Der Blog war die wichtigste Komponente für das Veröffentlichen von aktuellen Informationen. Es wurde Wert darauf gelegt
+    in regelmäßigen Abständen aktuelle Inhalte über den Projektverlauf zu veröffentlichen. Die Zielgruppe waren primär junge Techniker,
     die sich für Drohnen oder allgemein für Robotik interessierten. Alles zur Entwicklung des Blogs ist in Kapitel 3.3 angeführt.
     Durch sämtliche folgende Punkte wurde versucht, die Zielgruppe auf den Blog aufmerksam zu machen.
 
@@ -131,7 +131,7 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
     \begin{itemize}
       \item \textbf{Teamdynamik}
 
-      Bei einer Präsentation vor fremdem Publikum war ein professionelles Auftreten, gute Planung und vorallem Koordination gefragt.
+      Bei einer Präsentation vor fremdem Publikum war ein professionelles Auftreten, gute Planung und vor allem Koordination gefragt.
       Diese Auftritte wurden sowohl als Chancen genutzt, die Dynamik im Team weiterzuentwickeln, als auch Präsentationstechniken für
       die Endpräsentation zu trainieren.
 
@@ -143,7 +143,7 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
       \item \textbf{Marketing}
 
       Nicht zuletzt waren Wettbewerbe ein wichtiger Teil des Marketings, da sich die Projektidee nicht nur durch Präsentationen verbreiten ließ,
-      sondern auch in den zozialen Medien und auf den Webseiten der Veranstalter erwähnt wurde.
+      sondern auch in den sozialen Medien und auf den Webseiten der Veranstalter erwähnt wurde.
 
     \end{itemize}
 
@@ -181,7 +181,7 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
     Auch in diesem Bewerb erreichte Hovering Steward das Finale.
 
     \subsection*{Invasion der Drohnen}
-    Zu Begin der Diplomarbeit wurde versucht, möglichst viel über die Entwicklung und den Einsatz von Drohnen zu erfahren.
+    Zu Beginn der Diplomarbeit wurde versucht, möglichst viel über die Entwicklung und den Einsatz von Drohnen zu erfahren.
     Der Vortrag {Invasion der Drohnen\cite{invasionderdrohnen}}, mit anschließender Diskussion zum Thema "Entwicklung von Drohnen, Einsatzgebiete und rechtliche Einschränkungen" brachte
     viele neue Informationen, wie der Umgang mit unbemannten Flugobjekten, speziell in Österreich gehandhabt wird.
 
@@ -202,7 +202,7 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Blog}
-Dieses Kapitel setzt sich mit dem Entwicklungsprozess der technischer Planung, bis zur Implementierung
+Dieses Kapitel setzt sich mit dem Entwicklungsprozess der technischen Planung, bis zur Implementierung
 des Blogs, auseinander. Es werden technische Hintergründe, wie verwendete Technologien, aber
 auch allgemeine Überlegungen wie der Einsatz eines Content Management Systems, behandelt.
 
@@ -215,7 +215,7 @@ auch allgemeine Überlegungen wie der Einsatz eines Content Management Systems, 
     dem Zeitrahmen der Diplomarbeit durchführbar ist. Dadurch, dass ein Großteil der Ziele daraus besteht, Konzepte für die
     einzelnen Komponenten zu entwickeln, blieb wenig Zeit diese auch zu testen. Es gab also nur sehr beschränkt die Möglichkeit,
     den Fortschritt der Diplomarbeit vorzuzeigen, beispielsweise indem der Hexacopter bereits selbstständig eine Route fliegt.
-    Dazu kam, dass bezüglich des Flugrechts von unbemannten Luftfahrzegen in Österreich, keine konkreten Bestimmungen, was das Fliegen einer Drohne in einem
+    Dazu kam, dass bezüglich des Flugrechts von unbemannten Luftfahrzeugen in Österreich, keine konkreten Bestimmungen, was das Fliegen einer Drohne in einem
     geschlossenen, öffentlichen Raum betrifft, aufzufinden waren.
 
     Um Interessenten trotzdem Transparenz über den Fortschritt und Entwicklungsmethoden in unserem Projekt zu bieten, wurde
@@ -224,7 +224,7 @@ auch allgemeine Überlegungen wie der Einsatz eines Content Management Systems, 
 
     \subsection*{Content Management Systeme}
     Der Blog fungiert als \textbf{C}ontent \textbf{M}anagement \textbf{S}ystem, kurz CMS. Der Zweck eines
-    Content Management Systems ist der, dass duch Trennung von Inhalt und Design eine
+    Content Management Systems ist der, dass durch Trennung von Inhalt und Design eine
     sehr einfache Nutzung ermöglicht wird. Gewöhnliche Nutzer müssen keine besonderen
     Kenntnisse über das Bearbeiten oder Erstellen einer Website vorweisen, sondern
     können über einfache Eingabefelder Text, Bilder oder Videos auf einer Website einbinden.
@@ -292,11 +292,11 @@ auch allgemeine Überlegungen wie der Einsatz eines Content Management Systems, 
       \subsubsection*{Javascript}
       {Javascript\cite{javascript}} ist eine webbasierende Skriptsprache. Sie ist objektorientiert, was bedeutet, dass modular programmiert werden kann und damit Funktionen oder Eigenschaften
       durch Vererbung einmal geschrieben und mehrmals wiederverwendet werden können. Die Sprache wird genutzt, um eine Website dynamisch mittels Vorgängen wie Berechnungen oder Animationen auf einer Website durchzuführen.
-      Oft sind diese mit Interaktion des Nutzers verbunden. Javascript greift hierfür auf das Document Object Model des HTML-Dokumtens zu, um Elemente und Knoten in diesem hinzuzufügen, zu löschen oder
+      Oft sind diese mit Interaktion des Nutzers verbunden. Javascript greift hierfür auf das Document Object Model des HTML-Dokuments zu, um Elemente und Knoten in diesem hinzuzufügen, zu löschen oder
       zu ändern. Ein großer Vorteil von Javascript ist, dass durch das Einbinden von auf Javascript basierenden Bibliotheken, ganz leicht eine Vielzahl von zusätzlichen Funktionen
       verwendet werden können.
 
-      Javascript ist nachwievor die am weitesten verbreitetste Skriptsprache für Webanwendungen, die am Client verarbeitet wird. Sie wird stark unterstützt, wodurch auch einfach Hilfestellungen im Netz
+      Javascript ist nach wie vor die am weitesten verbreitetste Skriptsprache für Webanwendungen, die am Client verarbeitet wird. Sie wird stark unterstützt, wodurch auch einfach Hilfestellungen im Netz
       gefunden werden können. Es gab daher keinen Grund, eine Alternative zu Javascript in Betracht zu ziehen.
 
       Ein gutes Beispiel, und zugleich auch eine, für den Blog verwendete Bibliothek ist {jQuery\cite{jquery}}.
@@ -343,7 +343,7 @@ var items = $("#navbar-list li");
 
       Das Open-Source Framework {Twitter Bootstrap\cite{bootstrap}} gilt eigentlich als CSS-Framework, da den Elementen die Eigenschaften über CSS Klassen zugewiesen werden, es basiert jedoch
       ebenfalls auf HTML und Javascriptcript. Neben dem wesentlichen Vorteil der responsiven Gestaltung einer Website, bietet es durch
-      zahlreiche, vordefinierte Javascript Methoden, die ebenfalls durch die Zuweiseung von Klassen an Elemente gebunden werden, die Möglichkeiten, animierte Dropdown-Menüs, Pop-Up-Windows oder Bildergalerien einzubinden.
+      zahlreiche, vordefinierte Javascript Methoden, die ebenfalls durch die Zuweisung von Klassen an Elemente gebunden werden, die Möglichkeiten, animierte Dropdown-Menüs, Pop-Up-Windows oder Bildergalerien einzubinden.
       Weitere wichtige Eigenschaften von Bootstrap sind die weitreichende Browserkompatibilität und das einheitliche Design.
 
       Eine Alternative zu Bootstrap stellt {Foundation\cite{foundation}} dar. Es ist ebenso wie Bootstrap ein CSS Framework, mit dem ein responsives Gestalten einer Website umsetzbar ist.
@@ -400,7 +400,7 @@ var items = $("#navbar-list li");
         Die Grundstruktur eines HTML Dokuments besteht aus den drei Teilen:
 
         \begin{itemize}
-          \item Dokumenttyp-Dekleration
+          \item Dokumenttyp-Deklaration
           \item head
           \item body
         \end{itemize}
@@ -455,7 +455,7 @@ var items = $("#navbar-list li");
 
         Bei Links werden sowohl Links, die auf die Website verweisen, als auch Links, die auf andere Seiten zeigen bewertet.
         Zeigen sehr viele externe Links auf eine Seite, interpretiert der Robot diese als geläufig und sie erhält eine höhere Wertung. In unserem Fall war die Kombination mit anderen sozialen
-        Medien sehr hilfreich, da durch Veröffentlichungen auf diesen automatisch Links auf den Blog generiert werden.
+        Medien sehr hilfreich, da durch Veröffentlichungen auf diesen, automatisch Links auf den Blog generiert werden.
 
         Links, die von der eigenen Seite auf andere verweisen stellen jedoch einen Nachteil dar, da der Robot dem Link folgen könnte, statt die eigene Seite weiter zu inspizieren. Möchte man dies
         verhindern, kann dem \textless a \textgreater Tag das Attribut rel="nofollow" hinzugefügt werden, um dem Robot zu sagen, dass er diesem Link nicht folgen soll.
@@ -478,7 +478,7 @@ var items = $("#navbar-list li");
 
         Der Robot bewertet ebenfalls die Ladezeit einer Website. Sie ergibt sich aus der Anzahl an Bildern, Videos oder eingebundenen Bibliotheken oder Schriftarten auf der Website.
         Speziell beim Blog war früh klar, dass viele Bilder geladen werden müssen. Den Upload auf eine niedrige Dateigröße einzuschränken hat zu Beginn nicht ausgereicht.
-        Eine Javascript Bibliothek names {YoxView\cite{yoxview}} hat es allerdings ermöglicht, die Bilder erst dann zu laden, wenn ein Nutzer auf einen Thumbnail klickt. Die Größe der Thumbnails betrugen bloß
+        Eine Javascript Bibliothek names {YoxView\cite{yoxview}} hat es allerdings ermöglicht, die Bilder erst dann zu laden, wenn ein Nutzer auf einen Thumbnail klickt. Die Größe der Thumbnails betrug bloß
         ein paar Kilobyte, wodurch die Ladezeit der Website bedeutend verkürzt werden konnte.
 
     \end{itemize}
@@ -500,7 +500,7 @@ var items = $("#navbar-list li");
 
       \subsubsection*{Cross-Site-Scripting}
       Unter Cross-Site-Scripting, kurz genannt XSS versteht man die Injizierung von schadhaftem Code in eine Webapplikation, über eine Schnittstelle, zu der ein Nutzer
-      einfachen Zugang hat. In den meisten Fällen geschieht dies, wenn ein Nutzer gezielt Javascript Code über ein Formular auf einer Website in die Anwedung schleust.
+      einfachen Zugang hat. In den meisten Fällen geschieht dies, wenn ein Nutzer gezielt Javascript Code über ein Formular auf einer Website in die Anwendung schleust.
       Gelangt dieses Script an einen anderen Enduser, kann es dort beispielsweise ungehindert auf Cookies zugreifen, da der Browser des anderen Endusers nicht weiß,
       dass dem Script nicht zu vertrauen ist.
 
@@ -509,7 +509,7 @@ var items = $("#navbar-list li");
       das Zeichen \textless , welches notwendig ist um Javascript mittels \textless script \textgreater-Tag zu schreiben, durch "\&lt;" ersetzt.
 
       \subsubsection*{SQL-Injections}
-      Bei einer SQL-Injection hingegen injiziert ein Nutzer SQL-Statements in eine Anwedungung, um somit Daten aus der Datenbank auszulesen, oder diese zu manipulieren.
+      Bei einer SQL-Injection hingegen injiziert ein Nutzer SQL-Statements in eine Anwendung, um somit Daten aus der Datenbank auszulesen, oder diese zu manipulieren.
       Wird SQL Code dynamisch und mittels Nutzer Eingaben generiert, kann der Nutzer diese Statements manipulieren. Werden über ein Formular
       geschickte Daten per "\$\_POST['name'];" direkt in ein SQL Statement übernommen, ohne auf korrekte Zeicheneingabe, Länge des Strings oder Ähnliches validiert wird,
       können Fehler entstehen, die Schaden an der Datenbank anrichten.
@@ -536,5 +536,5 @@ var items = $("#navbar-list li");
     Die Recherche ergab, dass mehrere, unterschiedlich umfangreiche PHP Frameworks für den Blog geeignet wären. Da nicht genug Zeit war jedes testweise zu installieren und
     sich mit den Grundlagen auseinanderzusetzen, habe ich mich an Rezensionen von Nutzern dieser Frameworks orientiert. CodeIgniter stellte sich als optimales Framework für
     die Entwicklung einer Webanwendung dieser Größe heraus. Es bietet zahlreiche Bibliotheken, die über sehr simple Einbindung die Funktionalitäten erweitern. Meiner Meinung nach war das
-    Framework außerdem syntaktisch leichter erlernbar als PHP ansich. Eine Installation war auch nicht notwendig. Die Ordnerstruktur musste nach dem Download nur
+    Framework außerdem syntaktisch leichter erlernbar als PHP an sich. Eine Installation war auch nicht notwendig. Die Ordnerstruktur musste nach dem Download nur
     exportiert, und in einem Projektordner von XAMPP(vgl. Kapitel 4.2.1) eingefügt werden. Der Vorbereitungsprozess war dadurch, und dank einer besonders guten Dokumentation, minimal.
